[package]
authors = ["Jaci Brunning <jaci.brunning@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "lasercan-firmware"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtic = "1.1.4"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
stm32f0xx-hal = { version = "0.18", features = ["stm32f072", "rt"]}
vl53l1x-uld = "2.0.0"

[profile.dev]
opt-level = "s"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "lasercan-firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
