[package]
name = "lasercan-firmware"
version = "2024.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
nb = "1"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103", "medium"] }
grapple-lasercan = { version = "^2024.1.0", path = "../lasercan-impl" }
bxcan = "0.7.0"
embedded-alloc = "0.5.1"
lasercan-common = { path = "../lasercan-common" }
cortex-m-rtic = "1.1.4"
grapple-config = { version = "^0.2.0", features = ["m24c64"] }
grapple-m24c64 = "0.1.1"
vl53l1x-uld = "2.0.0"
shared-bus = { version = "0.3.1", features = ["cortex-m"] }

[[bin]]
name = "lasercan-firmware"
test = false
bench = false

[profile.release]
opt-level = "s"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
